--- a/memo.html
+++ b/memo.html
@@ -9,5 +9,7 @@ var geometry = new THREE.BoxGeometry(1, 1, 1);
 var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
 //光沢感がある
 var box = new THREE.Mesh(geometry, material);
+//メッシュ作成
 box.position.z = -5;
 scene.add(box);
+#
