--- a/enshu2.html
+++ b/enshu2.html
@@ -31,7 +31,7 @@
 //球
 var sphereGeometry = new THREE.SphereGeometry( 1.0, 32, 32); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0a00ae} );
+var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x0000ff} );
 var sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
 sphere.position.set( 0, 0, -5 );
 scene.add( sphere );
