--- a/enshu2.html
+++ b/enshu2.html
@@ -32,9 +32,16 @@
 var sphereGeometry = new THREE.SphereGeometry( 1.0, 32, 32); 
 //半径、垂直方向の分割数、水平方向の分割数
 var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x0000ff} );
-var sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
-sphere.position.set( 0, 0, -5 );
-scene.add( sphere );
+var sphere1 = new THREE.Mesh( sphereGeometry, sphereMaterial );
+sphere1.position.set( 0, 0, -5 );
+scene.add( sphere1 );
+
+var sphereGeometry = new THREE.SphereGeometry( 0.3, 32, 32); 
+//半径、垂直方向の分割数、水平方向の分割数
+var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0xff0000} );
+var sphere2 = new THREE.Mesh( sphereGeometry, sphereMaterial );
+sphere2.position.set( 0, 10, -5 );
+scene.add( sphere2 );
 
 
 
