--- a/enshu2.html
+++ b/enshu2.html
@@ -62,8 +62,8 @@ scene.add( sphere2 );
       requestAnimationFrame(update);
   
       // 箱を回転させる
-      sphere.rotation.x += 0.01;
-      sphere.rotation.y += 0.01;
+      sphere1.rotation.x += 0.01;
+      sphere1.rotation.y += 0.01;
   
       renderer.render(scene, camera);
     };
