--- a/enshu2.html
+++ b/enshu2.html
@@ -29,17 +29,17 @@
     var camera = new THREE.PerspectiveCamera(45, width / height, 1, 1000);
   
 //球
-var sphereGeometry = new THREE.SphereGeometry( 1.0, 32, 32); 
+var sphereGeometry1 = new THREE.SphereGeometry( 1.0, 32, 32); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0x0000ff} );
-var sphere1 = new THREE.Mesh( sphereGeometry, sphereMaterial );
+var sphereMaterial1 = new THREE. MeshPhongMaterial( {color: 0x0000ff} );
+var sphere1 = new THREE.Mesh( sphereGeometry1, sphereMaterial1 );
 sphere1.position.set( 0, 0, -5 );
 scene.add( sphere1 );
 
-var sphereGeometry = new THREE.SphereGeometry( 0.3, 32, 32); 
+var sphereGeometry2 = new THREE.SphereGeometry( 0.3, 32, 32); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial = new THREE. MeshPhongMaterial( {color: 0xff0000} );
-var sphere2 = new THREE.Mesh( sphereGeometry, sphereMaterial );
+var sphereMaterial2 = new THREE. MeshPhongMaterial( {color: 0xff0000} );
+var sphere2 = new THREE.Mesh( sphereGeometry2, sphereMaterial2 );
 sphere2.position.set( 1, 1, -5 );
 scene.add( sphere2 );
 
