--- a/enshu2.html
+++ b/enshu2.html
@@ -36,7 +36,7 @@ var sphere1 = new THREE.Mesh( sphereGeometry1, sphereMaterial1 );
 sphere1.position.set( 0, 0, -5 );
 scene.add( sphere1 );
 
-var sphereGeometry2 = new THREE.SphereGeometry( 0., 32, 32); 
+var sphereGeometry2 = new THREE.SphereGeometry( 0.1, 32, 32); 
 //半径、垂直方向の分割数、水平方向の分割数
 var sphereMaterial2 = new THREE. MeshPhongMaterial( {color: 0xff0000} );
 var sphere2 = new THREE.Mesh( sphereGeometry2, sphereMaterial2 );
