--- a/enshu2.html
+++ b/enshu2.html
@@ -31,7 +31,7 @@
 //球
 var sphereGeometry1 = new THREE.SphereGeometry( 1.0, 32, 32); 
 //半径、垂直方向の分割数、水平方向の分割数
-var sphereMaterial1 = new THREE. MeshPhongMaterial( {color: 0xff00ff} );
+var sphereMaterial1 = new THREE. MeshPhongMaterial( {color: 0x583f99} );
 var sphere1 = new THREE.Mesh( sphereGeometry1, sphereMaterial1 );
 sphere1.position.set( 0, 0, -5 );
 scene.add( sphere1 );
