--- a/enshu2.html
+++ b/enshu2.html
@@ -37,12 +37,20 @@ sphere1.position.set( 0, 0, -5 );
 scene.add( sphere1 );
 
 var sphereGeometry_sun = new THREE.SphereGeometry( 0.1, 32, 32); 
-//半径、垂直方向の分割数、水平方向の分割数
 var sphereMaterial_sun = new THREE. MeshPhongMaterial( {color: 0xff0000} );
 var sphere2 = new THREE.Mesh( sphereGeometry_sun, sphereMaterial_sun );
 var sphere3 = new THREE.Mesh( sphereGeometry_sun, sphereMaterial_sun );
 sphere2.position.set( 1.5, 1.5, -5 );
 sphere3.position.set( -1.5, -1.2, -5);
+scene.add( sphere2 );
+scene.add( sphere3 );
+    
+var sphereGeometry_shadow = new THREE.SphereGeometry( 0.1, 32, 32); 
+var sphereMaterial_shadow = new THREE. MeshPhongMaterial( {color: 0x0000ff} );
+var sphere4 = new THREE.Mesh( sphereGeometry_shadow, sphereMaterial_shadow );
+var sphere5 = new THREE.Mesh( sphereGeometry_shadow, sphereMaterial_shadow );
+sphere4.position.set( 1.3, 1.0, -4 );
+sphere5.position.set( 0, -1.2, -6);
 scene.add( sphere2 );
 scene.add( sphere3 );
     
