--- a/cg7.html
+++ b/cg7.html
@@ -35,7 +35,7 @@
   mat.map = texture;
   
   // バンプマップ読み込み
-  var bump = textureLoader.load("shikaku.jpg");
+  var bump = textureLoader.load("stone-bump.jpg");
   mat.bumpMap = bump;
   mat.bumpscale = 0.2;
 
