--- a/7.html
+++ b/7.html
@@ -30,7 +30,7 @@
 
 // テクスチャー読み込み
 var textureLoader = new THREE.TextureLoader();  
-  var texture = textureLoader.load("water.jpg");
+  var texture = textureLoader.load("water-bump.jpg");
   var mat = new THREE.MeshPhongMaterial();
   mat.map = texture;
     
