--- a/7-1.html
+++ b/7-1.html
@@ -27,7 +27,9 @@
     var scene = new THREE.Scene();
   
     // カメラを作成
-  var camera = new THREE.PerspectiveCamera(45, width / height, 1, 1000);
+  var camera = new THREE.PerspectiveCamera(45, width / height);
+    
+  camera.position.set(0, 0, 1000);
   
   const controls = new THREE.OrbitControls(camera,document.body);
 
@@ -61,24 +63,15 @@
     // シーンに追加
     scene.add(directionalLight2);
 
-  // 初回実行
-  var update = function() {
-    requestAnimationFrame(update);
-
-            tick();
+    tick();
 
         // 毎フレーム時に実行されるループイベントです
-        function tick() {
+    function tick() {
           // レンダリング
-          renderer.render(scene, camera);
-          requestAnimationFrame(tick);
-        }
-
-    renderer.render(scene, camera);
-  };
-  update();
-}
-  window.addEventListener('DOMContentLoaded', init);
+       renderer.render(scene, camera);
+       requestAnimationFrame(tick);
+    }
+  }
 </script>
 </body>
 </html>
