--- a/8-1.html
+++ b/8-1.html
@@ -29,6 +29,18 @@
 
         // カメラコントローラーを作成
         const controls = new THREE.OrbitControls(camera,document.body);
+        
+           // テクスチャー読み込み
+   var textureLoader = new THREE.TextureLoader();  
+  var texture = textureLoader.load("stone.jpg");
+  var mat = new THREE.MeshPhongMaterial();
+  mat.map = texture;
+  
+  // バンプマップ読み込み
+  var bump = textureLoader.load("stone-bump.jpg");
+  mat.bumpMap = bump;
+  mat.bumpscale = 0.2;
+
   
         // 平行光源1
         var directionalLight1 = new THREE.DirectionalLight(0xffffff);
