--- a/8-1.html
+++ b/8-1.html
@@ -30,16 +30,16 @@
         // カメラコントローラーを作成
         const controls = new THREE.OrbitControls(camera,document.body);
         
-           // テクスチャー読み込み
-   var textureLoader = new THREE.TextureLoader();  
-  var texture = textureLoader.load("stone.jpg");
-  var mat = new THREE.MeshPhongMaterial();
-  mat.map = texture;
+        // テクスチャー読み込み
+        var textureLoader = new THREE.TextureLoader();  
+        var texture = textureLoader.load("stone.jpg");
+        var mat = new THREE.MeshPhongMaterial();
+        mat.map = texture;
   
-  // バンプマップ読み込み
-  var bump = textureLoader.load("stone-bump.jpg");
-  mat.bumpMap = bump;
-  mat.bumpscale = 0.2;
+        // バンプマップ読み込み
+        var bump = textureLoader.load("stone-bump.jpg");
+        mat.bumpMap = bump;
+        mat.bumpscale = 0.2;
 
   
         // 平行光源1
@@ -55,8 +55,8 @@
 
         // 箱を作成(原点に作成)
         var geometry = new THREE.BoxGeometry(300, 300, 300);
-        var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
-        var box = new THREE.Mesh(geometry, material);
+        //var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
+        var box = new THREE.Mesh(geometry, mat);
         scene.add(box);
 
         tick();
