--- a/8-1.html
+++ b/8-1.html
@@ -68,6 +68,7 @@
           requestAnimationFrame(tick);
         }
       }
+      window.addEventListener('DOMContentLoaded', init);
     </script>
   </head>
 
