--- a/8-1.html
+++ b/8-1.html
@@ -52,6 +52,11 @@
         directionalLight2.position.set(-100, 100, 100);
         // シーンに追加
         scene.add(directionalLight2);
+        // 平行光源3
+        var directionalLight3 = new THREE.DirectionalLight(0xffffff);
+        directionalLight3.position.set(100, -100, 100);
+        // シーンに追加
+        scene.add(directionalLight3);
 
         // 箱を作成(原点に作成)
         var geometry = new THREE.BoxGeometry(300, 300, 300);
