--- a/8-1.html
+++ b/8-1.html
@@ -39,7 +39,7 @@
         // バンプマップ読み込み
         var bump = textureLoader.load("stone-bump.jpg");
         mat.bumpMap = bump;
-        mat.bumpscale = 0.2;
+        mat.bumpscale = 0.5;
 
   
         // 平行光源1
@@ -62,6 +62,7 @@
         var geometry = new THREE.BoxGeometry(300, 300, 300);
         //var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
         var box = new THREE.Mesh(geometry, mat);
+        box.position.z = -5;
         scene.add(box);
 
         tick();
