--- a/8-1.html
+++ b/8-1.html
@@ -18,6 +18,9 @@
           canvas: document.querySelector('#myCanvas')
         });
         renderer.setSize(width, height);
+        
+        //背景の色を設定
+        renderer.setClearColor(0xffffff);
 
         // シーンを作成
         const scene = new THREE.Scene();
