--- a/8-2.html
+++ b/8-2.html
@@ -83,6 +83,16 @@
         sprite2.position.z = -100;
         sprite2.scale.set(150,150,150);
         scene.add(sprite2);
+        
+        var texture3 = textureLoader.load("img/tree2.png");
+        const material3 = new THREE.SpriteMaterial({ map: texture3,});
+
+        const sprite3 = new THREE.Sprite(material3);
+        sprite2.position.x = -100;
+        sprite2.position.y = 50;
+        sprite2.position.z = -100;
+        sprite2.scale.set(150,150,150);
+        scene.add(sprite3);
 
         tick();
         // 毎フレーム時に実行されるループイベントです
